# my_engine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_cuda_test.sh  main.cpp  test_cuda.cpp  test_rt.cpp
.github/workflows/: ci.yml
core/: CMakeLists.txt  Engine.h
core/containers/: HashMap.h  String.h  Vector.h
core/io/: FileAccess.cpp  FileAccess.h  ResourceLoader.cpp  ResourceLoader.h
core/math/: Color.h  Math.h  Matrix4.cpp  Matrix4.h  Ray.h  Rect2.h  Transform.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
core/object/: ClassDB.cpp  ClassDB.h  ClassDB.inl  Object.cpp  Object.h  RefCounted.cpp  RefCounted.h  Resource.cpp  Resource.h  Signal.cpp  Signal.h
core/os/: Input.h  OS.cpp  OS.h  Window.h
core/variant/: Variant.cpp  Variant.h
docs/: AGENT_INTEGRATION.md  CUDA_ARCHITECTURE.md  CUDA_TASKS.md  DEVELOPMENT_PLAN.md  SYSTEM_REQUIREMENTS.md
editor/: CMakeLists.txt  editor_main.cpp
editor/editor/: BasePanel.cpp  BasePanel.h  EditorApp.cpp  EditorApp.h  EditorConfig.h  ImGuiPlatform.cpp  ImGuiPlatform.h  ImGuiRenderer.cpp  ImGuiRenderer.h  InspectorPanel.cpp  InspectorPanel.h  PanelManager.cpp  PanelManager.h  ScenePanel.cpp  ScenePanel.h
platform/: CMakeLists.txt  Input.cpp
platform/window/: Window.cpp  WindowX11.cpp
renderer/: CMakeLists.txt  Image.h  RenderDevice.cpp  RenderDevice.h  RenderTarget.cpp  RenderTarget.h
renderer/cuda/: CMakeLists.txt  cuda_error.h  cuda_math.h  cuda_memory.h  cuda_runtime_engine.cu  cuda_runtime_engine.h  cuda_stream.h  debug_test  demo_2d_particles.cu  demo_3d_particles.cu  demo_nbody.cu  test_cuda.cpp  test_interop.cu  test_primitives  test_primitives.cu
renderer/cuda/compute/: particle_system.cu  particle_system.h  post_processing.cu  post_processing.h  reduction.cu  reduction.h  scan.cu  scan.h
renderer/cuda/interop/: cuda_gl_interop.cpp  cuda_gl_interop.h  cuda_texture.cu  cuda_texture.h
renderer/cuda/profiler/: cuda_profiler.cpp  cuda_profiler.h
renderer/cuda/rt/: bvh_builder.h  path_tracer.cu  ray_types.h  rt_core.cu  rt_core.h
renderer/opengl/: RenderDeviceGL.cpp  RenderDeviceGL.h
renderer/postprocessing/: PostProcess.cpp  PostProcess.h
scene/: CMakeLists.txt
scene/2d/: Canvas.cpp  Canvas.h  Node2D.cpp  Node2D.h  Sprite2D.cpp  Sprite2D.h  Texture2D.h
scene/3d/: Camera3D.cpp  Camera3D.h  Environment.cpp  Environment.h  Light3D.cpp  Light3D.h  Material.h  Mesh.h  MeshInstance3D.cpp  MeshInstance3D.h  Node3D.cpp  Node3D.h
scene/animation/: Animation.cpp  Animation.h  AnimationPlayer.cpp  AnimationPlayer.h  AnimationTrack.cpp  AnimationTrack.h
scene/audio/: AudioServer.cpp  AudioServer.h  AudioStream.cpp  AudioStream.h
scene/main/: Node.cpp  Node.h  SceneTree.cpp  SceneTree.h  Viewport.h
scene/particles/: GPUParticles3D.cpp  GPUParticles3D.h
scene/physics/: CollisionShape3D.cpp  CollisionShape3D.h  PhysicsServer.cpp  PhysicsServer.h  RigidBody3D.cpp  RigidBody3D.h
scene/resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  ShaderMaterial.cpp  ShaderMaterial.h  Texture2D.cpp  Texture2D.h
scene/scripting/: Script.cpp  Script.h
scripts/: CMakeLists.txt  LuaBridge.cpp  LuaBridge.h  LuaBridge.inl  LuaVM.cpp  LuaVM.h
servers/: CMakeLists.txt
servers/rendering/: RenderingServer.cpp  RenderingServer.h
